chore: upgrade to AGP 8.0 (#1476)
* chore: upgrade to AGP 8.0

* chore: update gh actions to jdk 17

* add jvm args for ktlint

* chore: compile with jvmTarget 1.8

* chore(config): compile with jvmTarget 1.8

* chore: use Java 17 for lint

* chore(*): update android build tools version to 8.0